force-app/main/default/objects/Agent_Action_Log__c/Agent_Action_Log__c.object-meta.xml
<CustomObject>
    <label>Agent Action Log</label>
    <pluralLabel>Agent Action Logs</pluralLabel>
    <nameField>
        <label>Log Number</label>
        <type>AutoNumber</type>
        <displayFormat>AL-{000000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Record of every Agentforce action taken, for auditing the AI assistant. Append-only. APPEND-ONLY.</description>
</CustomObject>