force-app/main/default/objects/Agent_Action_Log__c/fields/Action_Name__c.field-meta.xml
<CustomField>
    <fullName>Action_Name__c</fullName>
    <label>Action Name</label>
    <type>Picklist</type>
    <required>true</required>
    <description>The action performed</description>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Summarize_Case</fullName><default>false</default><label>Summarize Case</label></value>
            <value><fullName>List_Missing_Evidence</fullName><default>false</default><label>List Missing Evidence</label></value>
            <value><fullName>Draft_Finding_Text</fullName><default>false</default><label>Draft Finding Text</label></value>
            <value><fullName>Draft_Evidence_Request</fullName><default>false</default><label>Draft Evidence Request</label></value>
            <value><fullName>Prepare_Manager_Summary</fullName><default>false</default><label>Prepare Manager Summary</label></value>
            <value><fullName>Send_Violation_Alert</fullName><default>false</default><label>Send Violation Alert</label></value>
            <value><fullName>Log_Agent_Action</fullName><default>false</default><label>Log Agent Action</label></value>
            <value><fullName>Generate_Analytics</fullName><default>false</default><label>Generate Analytics</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>