force-app/main/default/objects/Agent_Action_Log__c/fields/Actor__c.field-meta.xml
<CustomField>
    <fullName>Actor__c</fullName>
    <label>Actor</label>
    <type>Text</type>
    <length>255</length>
    <required>true</required>
    <description>The user who invoked the action</description>
</CustomField>