force-app/main/default/objects/Agent_Action_Log__c/fields/Audit_Case__c.field-meta.xml
<CustomField>
    <fullName>Audit_Case__c</fullName>
    <label>Audit Case</label>
    <type>Lookup</type>
    <referenceTo>Audit_Case__c</referenceTo>
    <relationshipName>Agent_Action_Logs</relationshipName>
    <relationshipLabel>Agent Action Logs</relationshipLabel>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related audit case (null for system-level actions)</description>
</CustomField>