force-app/main/default/objects/Agent_Action_Log__c/fields/Duration_Ms__c.field-meta.xml
<CustomField>
    <fullName>Duration_Ms__c</fullName>
    <label>Duration (ms)</label>
    <type>Number</type>
    <precision>8</precision>
    <scale>0</scale>
    <description>Execution duration in milliseconds</description>
</CustomField>