force-app/main/default/objects/Agent_Action_Log__c/fields/Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Error_Message__c</fullName>
    <label>Error Message</label>
    <type>Text</type>
    <length>255</length>
    <description>Error details if failed</description>
</CustomField>