force-app/main/default/objects/Agent_Action_Log__c/fields/Input_Summary__c.field-meta.xml
<CustomField>
    <fullName>Input_Summary__c</fullName>
    <label>Input Summary</label>
    <type>LongTextArea</type>
    <length>32000</length>
    <description>Summary of input provided to the agent</description>
</CustomField>