force-app/main/default/objects/Agent_Action_Log__c/fields/Output_Summary__c.field-meta.xml
<CustomField>
    <fullName>Output_Summary__c</fullName>
    <label>Output Summary</label>
    <type>LongTextArea</type>
    <length>32000</length>
    <description>Summary of output returned by the agent</description>
</CustomField>