force-app/main/default/objects/Agent_Action_Log__c/fields/Prompt_Template__c.field-meta.xml
<CustomField>
    <fullName>Prompt_Template__c</fullName>
    <label>Prompt Template</label>
    <type>Text</type>
    <length>255</length>
    <description>Which prompt template was used</description>
</CustomField>