force-app/main/default/objects/Agent_Action_Log__c/fields/Subagent__c.field-meta.xml
<CustomField>
    <fullName>Subagent__c</fullName>
    <label>Subagent</label>
    <type>Picklist</type>
    <required>true</required>
    <description>Which Agentforce subagent executed</description>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Auditor_Assistant</fullName><default>false</default><label>Auditor Assistant</label></value>
            <value><fullName>Evidence_Request</fullName><default>false</default><label>Evidence Request</label></value>
            <value><fullName>Manager_Review</fullName><default>false</default><label>Manager Review</label></value>
            <value><fullName>Compliance_Analytics</fullName><default>false</default><label>Compliance Analytics</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>