force-app/main/default/objects/Agent_Action_Log__c/fields/Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Timestamp__c</fullName>
    <label>Timestamp</label>
    <type>DateTime</type>
    <required>true</required>
    <description>When the action was executed</description>
</CustomField>