force-app/main/default/objects/Agent_Action_Log__c/validationRules/Prevent_Edit_After_Creation.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Edit_After_Creation</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISNEW())</errorConditionFormula>
    <errorMessage>This record is immutable and cannot be edited after creation.</errorMessage>
    <description>Agent Action Log is append-only. Blocks all updates after initial insert (FR-25).</description>
</ValidationRule>